--- a/src/Modules/CrestApps.OrchardCore.OpenAI.Azure/Views/AzureRagChat.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI.Azure/Views/AzureRagChat.Edit.cshtml
@@ -29,16 +29,13 @@
 </div>
 
 <div class="@Orchard.GetWrapperClasses("data-source-dependent", "data-source-dependent-any")">
-    <div class="@Orchard.GetEndClasses()">
+    <div class="@Orchard.GetEndClasses(true)">
         <div class="form-check">
             <input class="form-check-input" type="checkbox" asp-for="IsInScope" />
-
             <label class="form-check-label" asp-for="IsInScope">
-                @T["Restrict responses to indexed data"]
+                @T["Limit responses to indexed data"]
             </label>
+            <span class="hint dashed">@T["When enabled, the model will only generate responses using your Azure OpenAI On Your Data index (is_scope = true). If disabled, the model may use its general knowledge in addition to your data."]</span>
         </div>
-        <span class="hint">
-            @T["When enabled, the model will only generate responses using your Azure OpenAI On Your Data index (is_scope = true). If disabled, the model may use its general knowledge in addition to your data."]
-        </span>
     </div>
 </div>
