--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/OmnichannelActivityComplete.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/OmnichannelActivityComplete.Edit.cshtml
@@ -94,7 +94,7 @@
 
 <script at="Foot" depends-on="flatpickr,flatpickr-culture">
     document.addEventListener("DOMContentLoaded", function () {
-        var datePattern = '@Sys"tem.Globalization.CultureInfo.CurrentCulture.DateTimeFormat.ShortDatePattern';
+        var datePattern = '@System.Globalization.CultureInfo.CurrentCulture.DateTimeFormat.ShortDatePattern';
         var timePattern = '@System.Globalization.CultureInfo.CurrentCulture.DateTimeFormat.ShortTimePattern';
         var patterns = flatpickrCulture.createFlatpickrDateTimePattern(datePattern, timePattern);
 
