--- a/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions/Views/ChatInteraction.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions/Views/ChatInteraction.SummaryAdmin.cshtml
@@ -1,29 +1,39 @@
 <div class="row g-0">
     <div class="col-lg col-12 title d-flex align-items-center">
 
-        <div class="summary d-flex flex-column flex-md-row">
-            <div class="me-2">
-                @if (Model.Content != null)
+        <div class="summary">
+            <div class="d-flex flex-column flex-md-row">
+                <div class="me-2">
+                    @if (Model.Content != null)
+                    {
+                        @await DisplayAsync(Model.Content)
+                    }
+                </div>
+
+                @if (Model.Tags != null)
                 {
-                    @await DisplayAsync(Model.Content)
+                    <div class="tags me-1">
+                        @await DisplayAsync(Model.Tags)
+                    </div>
+                }
+                @if (Model.Meta != null)
+                {
+                    <div class="metadata me-1">
+                        @await DisplayAsync(Model.Meta)
+                    </div>
                 }
             </div>
 
-            @if (Model.Tags != null)
+            @if (Model.Description != null)
             {
-                <div class="tags me-1">
-                    @await DisplayAsync(Model.Tags)
-                </div>
-            }
-            @if (Model.Meta != null)
-            {
-                <div class="metadata me-1">
-                    @await DisplayAsync(Model.Meta)
+                <div>
+                    @await DisplayAsync(Model.Description)
                 </div>
             }
         </div>
+
     </div>
-    <div class="col-lg-auto col-12 d-flex justify-content-end">
+    <div class="col-lg-auto col-12 d-flex justify-content-end align-items-center">
         <div class="actions">
             @if (Model.Actions != null)
             {
