--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/Items/AIProfile.ChatActionsMenu.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/Items/AIProfile.ChatActionsMenu.SummaryAdmin.cshtml
@@ -1,5 +1,6 @@
 @using CrestApps.OrchardCore.AI.Core
 @using CrestApps.OrchardCore.AI.Models
+@using OrchardCore.DisplayManagement.Views
 
 @model ShapeViewModel<AIProfile>
 
