--- a/src/Modules/CrestApps.OrchardCore.AI/Views/AIProfileMainFields.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/AIProfileMainFields.Edit.cshtml
@@ -31,7 +31,7 @@
 @if (Model.IsNew)
 {
     <script asp-name="technical-name-generator"></script>
-    <script depends-on="technical-name-generator">
+    <script at="Foot" depends-on="technical-name-generator">
         window.initAutoGenerateTechnicalName('@Html.IdFor(x => x.DisplayText)', '@Html.IdFor(x => x.Name)');
     </script>
 }
