--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/OmnichannelActivityContainer.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/OmnichannelActivityContainer.SummaryAdmin.cshtml
@@ -43,9 +43,9 @@
                     <button type="button" class="btn btn-sm btn-secondary dropdown-toggle actions" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span>@T["Actions"]</span>
                     </button>
-                    <div class="actions-menu dropdown-menu dropdown-menu-end">
+                    <ul class="actions-menu dropdown-menu dropdown-menu-end">
                         @await DisplayAsync(Model.ActionsMenu)
-                    </div>
+                    </ul>
                 </div>
             }
         </div>
