--- a/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions/Views/ChatInteractionChat.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions/Views/ChatInteractionChat.cshtml
@@ -74,6 +74,10 @@
         border: none;
         box-shadow: none;
     }
+
+    .chat-parameters-content .nav-link {
+        padding: 0.5rem !important;
+    }
 </style>
 
 <script asp-name="ChatInteractionApp" at="Foot"></script>
