--- a/src/Modules/CrestApps.OrchardCore.AI/Views/EditProfileTools.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/EditProfileTools.Edit.cshtml
@@ -11,7 +11,7 @@
 }
 
 
-<h4 class="border-bottom pb-2">@T["System Defined Tools"]</h4>
+<h4 class="border-bottom pb-2">@T["Tools"]</h4>
 
 <div class="mb-3">
     @foreach (var tools in Model.Tools)
